# Dumm

./: CMakeLists.txt
include/: attacks.hpp  bitboard.hpp
src/: CMakeLists.txt  attacks.cpp
tests/: CMakeLists.txt  attacks.cpp  bitboard.cpp
